@@ -29,9 +29,9 @@
                                 <div class="tab">
                                         <button id="getStartedTab" class="tablinks waves-effect waves-light defaultOpen" onclick="changeTab('getStarted')">Get Started</button>
                                         <button id="parameterSetupTab" class="tablinks waves-effect waves-light" onclick="changeTab('parameterSetup')">Simulation Parameters</button>
-                                        <button id="popSetupTab" class="tablinks waves-effect waves-light" onclick="changeTab('popSetup')">Setup Populations</button>
+                                        <button id="popSetupTab" class="tablinks waves-effect waves-light" onclick="changeToPopulations()">Setup Populations</button>
                                         <button id="tab4" class="tablinks waves-effect waves-light" onclick="changeTab('page2')">Simulation Overview</button>
-                                        <button id="resultsPageTab" class="tablinks waves-effect waves-light" onclick="changeTab('resultsPage')">Results</button>
+                                        <button id="resultsPageTab" class="tablinks waves-effect waves-light" onclick="changeToOutput()">Results</button>
                                         <div class="fillertab"></div>
                                 </div>
                         </td>
@@ -54,7 +54,7 @@
                                                         <h5>Load paramaters from file:</h5>
                                                 </div>
                                                 <div class="col s3 offset-s3">
-                                                        <a class="disabled waves-effect waves-light btn" id="loadParams" onclick="loadParamsFromFile()">
+                                                        <a class="waves-effect waves-light btn" id="loadParams" onclick="document.getElementById('loadConfigFileButton').click();">
                                                                 Load File
                                                         </a>
                                                 </div>
@@ -71,11 +71,9 @@
                                                 </div>
                                                 -->
                                         </div>
-                                        <div class="row">
-                                                <div class="col s4">
-                                                        <input type="file" onchange='loadFromFile(this)'>
-                                                </div>
-                                        </div>
+                                        
+                                        <input id="loadConfigFileButton" type="file" onchange='loadFromFile(this)' style="display: hidden;">
+                                                
                                 </div>
                                 <div class="tabcontent" id="parameterSetup">
                                         <div class="row">
@@ -178,7 +176,9 @@
                                         -->
                                         <div id="popMapContent" class="hide" style="height: 80%; width 100%;">
                                                 <div class="divider" style="margin-bottom: 4px;"></div>
-                                                <div id="popMapDiv" class="map" style="min-height: 600px; min-width: 600px;"></div>
+                                                <div class="row" id="popMapRow">
+                                                        <div id="popMapDiv" class="map" style="min-height: 600px; min-width: 600px;"></div>
+                                                </div>
                                                 <div class="divider" style="margin-top: 4px; margin-bottom: 8px;"></div>
                                                 <div class="row">
                                                         <div class="col s9"><i>Click on the map to add a population to that location. Click on an existing population to edit it.</i></div>
@@ -206,11 +206,13 @@
                                                         </div>
                                                 </div>
                                         </div>
+                                        <!--
                                         <div class="row" id="heatMapContainer" style="display: none;">
                                                 Simulation Raw Output:
                                                 <div id="heatMapCanvas" style="max-width:600px; max-height: 600px;"></div>
                                                 <div id="testMap2" ></div>
                                         </div>
+                                        -->
                                         <div class="row" style="position: absolute; bottom: 8px; width: 80%">
                                                 <div class="col s3 offset-s5">
                                                         <a class="waves-effect waves-light btn" id="runSimButton" onclick="toggleImgLayer()">
@@ -262,8 +264,22 @@
                                                 <div class="col s6"><h4>Simulation Results</h4></div>
                                         </div>
                                         <div class="divider" style="margin-bottom: 4px;"></div>
-                                        <div id="resultMapDiv" style="height: 600px; width: 800px;"></div>
-                                        
+                                        <div class="row">
+                                                <div id="resultMapDiv"></div>
+                                        </div>
+                                        <div class="divider" style="margin-bottom: 4px;"></div>
+                                        <div class="row" id="rawHeatmapContainer"></div>
+                                        <div class="row">
+                                                <div class="col s3 offset-s3">
+                                                        <a class="waves-effect waves-light btn" onclick="saveSimToFile();">Save Parameters</a>
+                                                </div>
+                                                <div class="col s3">
+                                                        <a class="waves-effect waves-light btn" onclick="saveImgToFile(0);">Save Raw Image</a>
+                                                </div>
+                                                <div class="col s3">
+                                                        <a class="waves-effect waves-light btn" onclick="saveImgToFile(1);">Save Map Image</a>
+                                                </div>
+                                        </div>
                                 </div>
                         </td>
                 </tr>
