@@ -32,6 +32,7 @@ var features;
 var source = new ol.source.Vector({wrapX: false});
 var popLabelFeatures = [];
 var pointVector;
+var canvas;
 var canvasImage;
 var imageLayer;
 var addPopFunction;
@@ -256,6 +257,7 @@ function runSimulation(curYear){
                 generateCanvas(curYear, 1);
                 //saveSimToFile(false);
                 changeToOutput();
+                
                 //drawHeatMap(geoGrid);
         }
         
@@ -306,6 +308,28 @@ function setupGradient(){
         return gradient;
 }
 
+function placePopulation(e){
+                var tempFeatures = [];
+                map.forEachFeatureAtPixel(e.pixel, function(feature, layer) {
+                        tempFeatures.push(feature);
+                        
+                }, {hitTolerance: 5});
+                console.log("results: " + tempFeatures.length);
+                if(!tempFeatures.length){
+                        showPopEditor(e.coordinate);
+                }
+                else{
+                        var tempName = tempFeatures[0].get('description');
+                        console.log("existing feature clicked" + tempName);
+                        for(var t = 0; t < towns.length; t++){
+                                if(towns[t].name == tempName){
+                                        showPopUpdater(t);
+                                        break;
+                                }
+                        }
+                }
+        }
+
 function setupOlInputMap(){
         var drawControls;
         var teststyle = new ol.style.Style({
@@ -343,29 +367,9 @@ function setupOlInputMap(){
 
         map.addLayer(pointVector);
         
-        addPopFunction = function(e){
-                var tempFeatures = [];
-                map.forEachFeatureAtPixel(e.pixel, function(feature, layer) {
-                        tempFeatures.push(feature);
-                        
-                }, {hitTolerance: 5});
-                console.log("results: " + tempFeatures.length);
-                if(!tempFeatures.length){
-                        showPopEditor(e.coordinate);
-                }
-                else{
-                        var tempName = tempFeatures[0].get('description');
-                        console.log("existing feature clicked" + tempName);
-                        for(var t = 0; t < towns.length; t++){
-                                if(towns[t].name == tempName){
-                                        showPopUpdater(t);
-                                        break;
-                                }
-                        }
-                }
-        };
+        addPopFunction = map.on('click', placePopulation);
         
-        map.getViewport().addEventListener('click', addPopFunction);
+        //map.getViewport().addEventListener('click', addPopFunction);
         
         /*
         addPopFunction = map.on('click', function(e){
@@ -447,7 +451,7 @@ function generateCanvas(curYear, scale){
         var gradient = setupGradient();
         var gradientSteps = carryCapacity - 1;
         
-        var canvas = document.createElement('canvas');
+        canvas = document.createElement('canvas');
         var ctx = canvas.getContext('2d');
 
         canvas.width = xSize * scale;
@@ -492,8 +496,7 @@ function generateCanvas(curYear, scale){
         canvasImage.onload = function(){
                 console.log("picture: " + canvasImage.naturalHeight);
                 console.log("picture: " + canvasImage.naturalWidth);
-                document.getElementById("heatMapContainer").style.display = "inline";
-                document.getElementById("heatMapCanvas").appendChild(canvasImage);
+                document.getElementById("rawHeatmapContainer").appendChild(canvasImage);
                 
                 var tempLength = geoGrid.length - 1;
                 var tempPoint = geoGrid[tempLength][geoGrid[tempLength].length - 1]
@@ -542,17 +545,6 @@ function generateCanvas(curYear, scale){
                 //}
                 map.addLayer(imageLayer);
         }
-}
-
-function saveMapImage(){
-        var mapCanvas = document.getElementById
-        canvas.toBlob(function(blob) {
-              saveAs(blob, 'map.png');
-            });
-}
-
-function saveCanvasImage(){
-        
 }
 
 function toggleImgLayer(){
