@@ -1,3 +1,4 @@
+9/19/17 v14 - Save load system is working and includes several image outputs. Also start of output page. \n
 9/17/17 v13 - Added basic save load system and faster way of drawing heatmap outputs. \n
 9/4/17 v12a - Parameters entered in the settings and advanced settings screens are actually used now. \n
 9/4/17 v12 - First version that somewhat works. Parameters are placeholder but population input is fully working. \n
